--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,7 @@
 
 .search_box {
   width: 400px;
+  height: 50px;
   padding: 10px;
   border: 0;
   border-radius: 3px;
@@ -64,11 +65,57 @@
 .search_btn {
   border: 0;
   width: 120px;
-  height: 49px;
-  padding: 13px;
+  height: 50px;
+  padding: 17px;
   border-radius: 5px;
   background-color: #e55473;
   color: #fff;
   cursor: pointer;
 }
 /* End : Navbar */
+
+/* Start : banner */
+.banner {
+  width: 100%;
+  min-height: 700px;
+  background-color: #e554733f;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  padding-top: 50px;
+  padding-left: 30px;
+}
+
+.banner_title {
+  font-size: 55px;
+}
+
+.banner_info {
+  font-size: 18px;
+  font-style: italic;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  line-height: 32px;
+}
+
+.banner_image img {
+  width: 550px;
+  height: 650px;
+  margin-top: 20px;
+}
+
+.shop_btn {
+  color: #fff;
+  background-color: #e55473;
+  border: 0;
+  border-radius: 6px;
+  width: 150px;
+  padding: 15px;
+  cursor: pointer;
+  transition: 0.5s;
+}
+
+.shop_btn:hover {
+  width: 260px;
+}
+/* End : banner */
