--- a/css/style.css
+++ b/css/style.css
@@ -142,7 +142,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-top: 30px;
+  margin-top: 60px;
   margin-bottom: 30px;
 }
 
@@ -177,3 +177,20 @@
 }
 
 /* End : Featured Section */
+
+/* Start : Our Services section */
+
+.our_services {
+  width: 80%;
+  margin: auto;
+  background-color: #27272711;
+  margin-top: 150px;
+  margin-bottom: 150px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 250px;
+  text-align: center;
+}
+
+/* End : Our Services Section */
