--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,7 @@
   background-color: #e55473;
   color: #fff;
   cursor: pointer;
+  font-weight: bold;
 }
 /* End : Navbar */
 
@@ -113,6 +114,7 @@
   padding: 15px;
   cursor: pointer;
   transition: 0.5s;
+  font-weight: bold;
 }
 
 .shop_btn:hover {
@@ -194,3 +196,39 @@
 }
 
 /* End : Our Services Section */
+
+/* Start : Hot Deals Section */
+
+.hotDeal_section {
+  width: 100%;
+  height: 620px;
+  text-align: center;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.hotDeal_title {
+  font-size: 30px;
+  margin-bottom: 15px;
+}
+
+.hotDeal_info {
+  font-size: 15px;
+  margin-bottom: 10px;
+  font-style: italic;
+}
+
+.signUp_btn {
+  border: 0;
+  width: 180px;
+  margin-top: 10px;
+  padding: 18px;
+  background-color: #e55473;
+  border-radius: 6px;
+  color: #fff;
+  font-size: 15px;
+  font-weight: bold;
+}
+
+/* End : Hot Deals Section */
