--- a/css/style.css
+++ b/css/style.css
@@ -232,3 +232,32 @@
 }
 
 /* End : Hot Deals Section */
+
+/* Start : Instagram section */
+
+.instagram_section {
+  width: 80%;
+  margin: auto;
+  margin-top: 100px;
+  text-align: center;
+}
+
+.instagram_section_title {
+  font-size: 30px;
+  margin-bottom: 13px;
+}
+
+.instagram_section_details {
+  margin-top: 10px;
+  font-size: 15px;
+  font-style: italic;
+  margin-bottom: 20px;
+}
+
+.images {
+  display: flex;
+  gap: 20px;
+  margin-bottom: 30px;
+}
+
+/* End : Instagram Section */
