--- a/css/style.css
+++ b/css/style.css
@@ -318,3 +318,35 @@
 }
 
 /* End : Latest Deals Section */
+
+/* start : footer  */
+
+.footer {
+  width: 100%;
+  height: 450px;
+  text-align: center;
+  background-color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer_span {
+  color: #fff;
+}
+
+.footer_details {
+  color: #fff;
+  font-size: 14px;
+  margin-top: 10px;
+  font-style: italic;
+  line-height: 25px;
+}
+
+.copyright_text {
+  color: grey;
+  font-size: 12px;
+  margin-top: 50px;
+}
+
+/* end : footer  */
