--- a/css/style.css
+++ b/css/style.css
@@ -143,14 +143,15 @@
 .featured_flowers_container {
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  margin-top: 60px;
+  justify-content: space-around;
+  /* gap: 30px; */
+  margin-top: 70px;
   margin-bottom: 30px;
 }
 
 .pink_flower img {
   max-width: 300px;
-  height: 400px;
+  height: 350px;
   background-color: #e5547333;
   padding: 50px 50px 0 50px;
   border-top-right-radius: 300px;
@@ -159,7 +160,7 @@
 
 .various_flower img {
   max-width: 300px;
-  height: 400px;
+  height: 350px;
   background-color: #0598a02f;
   padding: 50px 50px 0 50px;
   border-top-right-radius: 300px;
@@ -167,7 +168,7 @@
 }
 .yellow_flower img {
   max-width: 300px;
-  height: 400px;
+  height: 350px;
   background-color: #477d113b;
   padding: 50px 50px 0 50px;
   border-top-right-radius: 300px;
