--- a/css/style.css
+++ b/css/style.css
@@ -230,6 +230,12 @@
   color: #fff;
   font-size: 15px;
   font-weight: bold;
+  cursor: pointer;
+  transition: 0.5s;
+}
+
+.signUp_btn:hover {
+  width: 300px;
 }
 
 /* End : Hot Deals Section */
